@@ -19,17 +19,17 @@ package stroom.importexport;
 
 import org.junit.Assert;
 import org.junit.Test;
-import stroom.dashboard.DashboardService;
+import stroom.dashboard.DashboardStore;
 import stroom.dashboard.shared.ComponentConfig;
-import stroom.dashboard.shared.Dashboard;
 import stroom.dashboard.shared.DashboardConfig;
-import stroom.dashboard.shared.FindDashboardCriteria;
+import stroom.dashboard.shared.DashboardDoc;
 import stroom.dashboard.shared.QueryComponentSettings;
 import stroom.dashboard.shared.TableComponentSettings;
 import stroom.dashboard.shared.VisComponentSettings;
 import stroom.dictionary.DictionaryStore;
 import stroom.dictionary.shared.DictionaryDoc;
-import stroom.entity.shared.DocRefUtil;
+import stroom.docstore.shared.Doc;
+import stroom.document.DocumentStore;
 import stroom.entity.shared.DocRefs;
 import stroom.explorer.ExplorerNodeService;
 import stroom.explorer.ExplorerService;
@@ -37,30 +37,28 @@ import stroom.explorer.shared.ExplorerConstants;
 import stroom.explorer.shared.ExplorerNode;
 import stroom.feed.FeedService;
 import stroom.importexport.shared.ImportState;
-import stroom.index.IndexService;
-import stroom.index.shared.FindIndexCriteria;
-import stroom.index.shared.Index;
-import stroom.pipeline.PipelineService;
-import stroom.pipeline.shared.FindPipelineEntityCriteria;
-import stroom.pipeline.shared.PipelineEntity;
-import stroom.query.api.v2.DocRef;
+import stroom.index.IndexStore;
+import stroom.index.shared.IndexDoc;
+import stroom.pipeline.PipelineStore;
+import stroom.pipeline.shared.PipelineDoc;
+import stroom.docref.DocRef;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.ExpressionOperator.Op;
 import stroom.query.api.v2.ExpressionTerm;
 import stroom.query.api.v2.ExpressionTerm.Condition;
 import stroom.resource.ResourceStore;
-import stroom.script.ScriptService;
-import stroom.script.shared.Script;
+import stroom.script.ScriptStore;
+import stroom.script.shared.ScriptDoc;
 import stroom.test.AbstractCoreIntegrationTest;
 import stroom.test.CommonTestControl;
 import stroom.util.shared.ResourceKey;
-import stroom.visualisation.VisualisationService;
-import stroom.visualisation.shared.FindVisualisationCriteria;
-import stroom.visualisation.shared.Visualisation;
+import stroom.visualisation.VisualisationStore;
+import stroom.visualisation.shared.VisualisationDoc;
 
 import javax.inject.Inject;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 
 public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
     @Inject
@@ -68,19 +66,17 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
     @Inject
     private ResourceStore resourceStore;
     @Inject
-    private PipelineService pipelineService;
+    private PipelineStore pipelineStore;
     @Inject
-    private FeedService feedService;
+    private VisualisationStore visualisationStore;
     @Inject
-    private VisualisationService visualisationService;
+    private ScriptStore scriptStore;
     @Inject
-    private ScriptService scriptService;
-    @Inject
-    private IndexService indexService;
+    private IndexStore indexStore;
     @Inject
     private DictionaryStore dictionaryStore;
     @Inject
-    private DashboardService dashboardService;
+    private DashboardStore dashboardStore;
     @Inject
     private CommonTestControl commonTestControl;
     @Inject
@@ -122,38 +118,39 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         final List<ExplorerNode> nodes = explorerNodeService.getDescendants(null);
         Assert.assertEquals(3, nodes.size());
 
-        Visualisation vis = null;
+        DocRef visRef = null;
         if (!skipVisCreation) {
-            final DocRef scriptRef = explorerService.create(Script.ENTITY_TYPE, "Test Script", folder2, null);
-            Script script = scriptService.readDocument(scriptRef);
-            script.setResource("Test Data");
-            script = scriptService.save(script);
+            final DocRef scriptRef = explorerService.create(ScriptDoc.DOCUMENT_TYPE, "Test Script", folder2, null);
+            ScriptDoc script = scriptStore.readDocument(scriptRef);
+            script.setData("Test Data");
+            scriptStore.writeDocument(script);
+            Assert.assertEquals(1, scriptStore.list().size());
 
-            final DocRef visRef = explorerService.create(Visualisation.ENTITY_TYPE, "Test Vis", folder2, null);
-            vis = visualisationService.readDocument(visRef);
-            vis.setScriptRef(DocRefUtil.create(script));
-            vis = visualisationService.save(vis);
-            Assert.assertEquals(1, commonTestControl.countEntity(Visualisation.class));
+            visRef = explorerService.create(VisualisationDoc.DOCUMENT_TYPE, "Test Vis", folder2, null);
+            final VisualisationDoc vis = visualisationStore.readDocument(visRef);
+            vis.setScriptRef(scriptRef);
+            visualisationStore.writeDocument(vis);
+            Assert.assertEquals(1, visualisationStore.list().size());
         }
 
-        final DocRef pipelineRef = explorerService.create(PipelineEntity.ENTITY_TYPE, "Test Pipeline", folder1, null);
-        PipelineEntity pipelineEntity = pipelineService.readDocument(pipelineRef);
-        pipelineEntity = pipelineService.save(pipelineEntity);
-        Assert.assertEquals(1, commonTestControl.countEntity(PipelineEntity.class));
+        final DocRef pipelineRef = explorerService.create(PipelineDoc.DOCUMENT_TYPE, "Test Pipeline", folder1, null);
+        final PipelineDoc pipelineDoc = pipelineStore.readDocument(pipelineRef);
+        pipelineStore.writeDocument(pipelineDoc);
+        Assert.assertEquals(1, pipelineStore.list().size());
 
-        final DocRef indexRef = explorerService.create(Index.ENTITY_TYPE, "Test Index", folder1, null);
-        Index index = indexService.readDocument(indexRef);
-        index = indexService.save(index);
-        Assert.assertEquals(1, commonTestControl.countEntity(Index.class));
+        final DocRef indexRef = explorerService.create(IndexDoc.DOCUMENT_TYPE, "Test Index", folder1, null);
+        final IndexDoc index = indexStore.readDocument(indexRef);
+        indexStore.writeDocument(index);
+        Assert.assertEquals(1, indexStore.list().size());
 
         final DocRef dictionaryRef = explorerService.create(DictionaryDoc.ENTITY_TYPE, "Test Dictionary", folder1, null);
-        DictionaryDoc dictionary = dictionaryStore.readDocument(dictionaryRef);
-        dictionaryStore.update(dictionary);
-//        Assert.assertEquals(1, commonTestControl.countEntity(DictionaryDoc.class));
+        final DictionaryDoc dictionary = dictionaryStore.readDocument(dictionaryRef);
+        dictionaryStore.writeDocument(dictionary);
+        Assert.assertEquals(1, dictionaryStore.list().size());
 
         // Create query.
         final QueryComponentSettings queryComponentSettings = new QueryComponentSettings();
-        queryComponentSettings.setDataSource(DocRefUtil.create(index));
+        queryComponentSettings.setDataSource(indexRef);
         queryComponentSettings.setExpression(createExpression(dictionary).build());
 
         final ComponentConfig query = new ComponentConfig();
@@ -165,7 +162,7 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         // Create table.
         final TableComponentSettings tableSettings = new TableComponentSettings();
         tableSettings.setExtractValues(true);
-        tableSettings.setExtractionPipeline(DocRefUtil.create(pipelineEntity));
+        tableSettings.setExtractionPipeline(pipelineRef);
 
         final ComponentConfig table = new ComponentConfig();
         table.setId("table-1234");
@@ -177,7 +174,7 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         final VisComponentSettings visSettings = new VisComponentSettings();
         visSettings.setTableId("table-1234");
         visSettings.setTableSettings(tableSettings);
-        visSettings.setVisualisation(DocRefUtil.create(vis));
+        visSettings.setVisualisation(visRef);
 
         final ComponentConfig visualisation = new ComponentConfig();
         visualisation.setId("visualisation-1234");
@@ -195,18 +192,17 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         final DashboardConfig dashboardData = new DashboardConfig();
         dashboardData.setComponents(components);
 
-        final DocRef dashboardRef = explorerService.create(Dashboard.ENTITY_TYPE, "Test Dashboard", folder1, null);
-        Dashboard dashboard = dashboardService.readDocument(dashboardRef);
-        dashboard.setDashboardData(dashboardData);
-        dashboard = dashboardService.save(dashboard);
-        Assert.assertEquals(1, commonTestControl.countEntity(Dashboard.class));
+        final DocRef dashboardRef = explorerService.create(DashboardDoc.DOCUMENT_TYPE, "Test Dashboard", folder1, null);
+        DashboardDoc dashboard = dashboardStore.readDocument(dashboardRef);
+        dashboard.setDashboardConfig(dashboardData);
+        dashboard = dashboardStore.writeDocument(dashboard);
+        Assert.assertEquals(1, dashboardStore.list().size());
 
-//        int startFolderSize = commonTestControl.countEntity(Folder.class);
-        int startVisualisationSize = commonTestControl.countEntity(Visualisation.class);
-        final int startPipelineSize = commonTestControl.countEntity(PipelineEntity.class);
-        final int startIndexSize = commonTestControl.countEntity(Index.class);
+        int startVisualisationSize = visualisationStore.list().size();
+        final int startPipelineSize = pipelineStore.list().size();
+        final int startIndexSize = indexStore.list().size();
         final int startDictionarySize = dictionaryStore.list().size();
-        final int startDashboardSize = commonTestControl.countEntity(Dashboard.class);
+        final int startDashboardSize = dashboardStore.list().size();
 
         final ResourceKey file = resourceStore.createTempFile("Export.zip");
         final DocRefs docRefs = new DocRefs();
@@ -240,20 +236,19 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
 
         importExportService.performImportWithConfirmation(resourceStore.getTempFile(file), confirmations);
 
-//        Assert.assertEquals(startFolderSize, commonTestControl.countEntity(Folder.class));
-        Assert.assertEquals(startVisualisationSize, commonTestControl.countEntity(Visualisation.class));
-        Assert.assertEquals(startPipelineSize, commonTestControl.countEntity(PipelineEntity.class));
-        Assert.assertEquals(startIndexSize, commonTestControl.countEntity(Index.class));
+        Assert.assertEquals(startVisualisationSize, visualisationStore.list().size());
+        Assert.assertEquals(startPipelineSize, pipelineStore.list().size());
+        Assert.assertEquals(startIndexSize, indexStore.list().size());
         Assert.assertEquals(startDictionarySize, dictionaryStore.list().size());
-        Assert.assertEquals(startDashboardSize, commonTestControl.countEntity(Dashboard.class));
+        Assert.assertEquals(startDashboardSize, dashboardStore.list().size());
 
         // Load the dashboard.
-        final Visualisation loadedVisualisation = visualisationService.find(new FindVisualisationCriteria()).getFirst();
-        final PipelineEntity loadedPipeline = pipelineService.find(new FindPipelineEntityCriteria()).getFirst();
-        final Index loadedIndex = indexService.find(new FindIndexCriteria()).getFirst();
-        final DictionaryDoc loadedDictionary = dictionaryStore.readDocument(dictionaryStore.list().iterator().next());
-        final Dashboard loadedDashboard = dashboardService.find(new FindDashboardCriteria()).getFirst();
-        final List<ComponentConfig> loadedComponents = loadedDashboard.getDashboardData().getComponents();
+        final VisualisationDoc loadedVisualisation = first(visualisationStore);
+        final DocRef loadedPipeline = pipelineStore.list().get(0);
+        final DocRef loadedIndex = indexStore.list().get(0);
+        final DictionaryDoc loadedDictionary = first(dictionaryStore);
+        final DashboardDoc loadedDashboard = first(dashboardStore);
+        final List<ComponentConfig> loadedComponents = loadedDashboard.getDashboardConfig().getComponents();
         final ComponentConfig loadedQuery = loadedComponents.get(0);
         final QueryComponentSettings loadedQueryData = (QueryComponentSettings) loadedQuery.getSettings();
         final ComponentConfig loadedTable = loadedComponents.get(1);
@@ -262,13 +257,13 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         final VisComponentSettings loadedVisSettings = (VisComponentSettings) loadedVis.getSettings();
 
         // Verify all entity references have been restored.
-        Assert.assertEquals(DocRefUtil.create(loadedIndex), loadedQueryData.getDataSource());
+        Assert.assertEquals(loadedIndex, loadedQueryData.getDataSource());
         Assert.assertEquals(stroom.docstore.shared.DocRefUtil.create(loadedDictionary),
                 ((ExpressionTerm) loadedQueryData.getExpression().getChildren().get(1)).getDictionary());
-        Assert.assertEquals(DocRefUtil.create(loadedPipeline), loadedTableSettings.getExtractionPipeline());
+        Assert.assertEquals(loadedPipeline, loadedTableSettings.getExtractionPipeline());
 
         if (!skipVisExport || skipVisCreation) {
-            Assert.assertEquals(DocRefUtil.create(loadedVisualisation), loadedVisSettings.getVisualisation());
+            Assert.assertEquals(stroom.docstore.shared.DocRefUtil.create(loadedVisualisation), loadedVisSettings.getVisualisation());
         } else {
             Assert.assertNotNull(loadedVisSettings.getVisualisation());
             Assert.assertNotNull(loadedVisSettings.getVisualisation().getType());
@@ -276,15 +271,22 @@ public class TestImportExportDashboards extends AbstractCoreIntegrationTest {
         }
     }
 
+    private <T extends Doc> T first(final DocumentStore<T> store) {
+        final Set<DocRef> set = store.listDocuments();
+        if (set != null && set.size() > 0) {
+            return store.readDocument(set.iterator().next());
+        }
+        return null;
+    }
+
     private void deleteAllAndCheck() {
         clean(true);
 
-//        Assert.assertEquals(0, commonTestControl.countEntity(Folder.class));
-        Assert.assertEquals(0, commonTestControl.countEntity(Visualisation.class));
-        Assert.assertEquals(0, commonTestControl.countEntity(PipelineEntity.class));
-        Assert.assertEquals(0, commonTestControl.countEntity(Index.class));
+        Assert.assertEquals(0, visualisationStore.list().size());
+        Assert.assertEquals(0, pipelineStore.list().size());
+        Assert.assertEquals(0, indexStore.list().size());
         Assert.assertEquals(0, dictionaryStore.list().size());
-        Assert.assertEquals(0, commonTestControl.countEntity(Dashboard.class));
+        Assert.assertEquals(0, dashboardStore.list().size());
     }
 
     private ExpressionOperator.Builder createExpression(final DictionaryDoc dictionary) {
